Hide upgrade link until template added. Incremented media version for update.

--- a/pingpong/templates/main.html
+++ b/pingpong/templates/main.html
@@ -13,7 +13,7 @@
 			<div class="core_right" style="margin: 11px 0 0 30px"><a href="" onclick="showPopup('add', '/score/add', ''); return false;" class="nav_add core_radius8">Add score</a></div>
 			
 			<!-- Show when in trial mode - up to 14 days after signup date -->
-			<div class="nav_trial">14 trial days left - <a href="" onclick="showPopup('upgrade', '/upgrade', ''); return false;"><strong>upgrade now</strong></a></div>
+			<!--<div class="nav_trial">14 trial days left - <a href="" onclick="showPopup('upgrade', '/upgrade', ''); return false;"><strong>upgrade now</strong></a></div>-->
 			
 			<div class="core_clear"></div>
 		</div>
