Add new players is now supported through the settings popup. Still some encoding issues to sort out.

--- a/pingpong/templates/settings.html
+++ b/pingpong/templates/settings.html
@@ -6,10 +6,10 @@
 		<form action="">
 		<div class="popup_body core_radius_bottom6">
 			<div class="settings popup_container core_radius6">
-				<span class="core_right"><a href="" onclick="settingsAdd(); return false;" style="color: #006699">Add new players</a></span>
+				<span class="core_right"><a id="add_new_players" href="" onclick="settingsAdd(); return false;" style="color: #006699">Add new players</a></span>
 				<div id="settings_add" style="display: none;">
 					<h3>Add Players</h3>
-					<p class="core_text_med mb8 core_light" style="margin-top: 8px; font-size: 12px; font-family: Arial, Helvetica, sans-serif;">Add new players below - one player per line.</p>
+					<p class="core_text_med mb8 core_light" style="margin-top: 8px; font-size: 12px; font-family: Arial, Helvetica, sans-serif;">Add new players below entering one player name per line.</p>
 					<div class="mb_extra"></div>
 					<div class="signup_players_box">
 						<div id="signup_players_example" class="signup_players_example">David M<br />James D</div>
