--- a/pingpong/templates/upgrade.html
+++ b/pingpong/templates/upgrade.html
@@ -1,7 +1,7 @@
 	<div id="popup_upgrade" class="popup core_radius_top8">
 		<div class="popup_header core_radius_top8">
 			<span class="core_right"><a href="" onClick="hideShade(); return false;" class="popup_close"><strong>close</strong></a></span>
-			<img src="{{ MEDIA_URL }}pingpong/images/header_settings.gif" width="97" height="22" alt="Settings" />
+			<img src="{{ MEDIA_URL }}pingpong/images/header_upgrade_your_account.gif" width="261" height="24" alt="Settings" />
 		</div>
 		<form action="">
 		<div class="popup_body core_radius_bottom6">
@@ -9,14 +9,12 @@
 				<span class="core_right"><a href="" class="btn_blue core_radius3 iea" onClick="upgrade('pro'); return false;">Upgrade</a></span>
 				<div class="upgrade_price">$8.95/mo</div>
 				<ul class="upgrade_list">
-					<li>Only 5000 spots available</li>
-					<li>List up to <strong>100 items</strong> at any one time</li>
-					<li>Add up to <strong>8 images</strong> for each item</li>
-					<li>No transaction fees</li>
-					<li>Your voice counts - you pick the features we add next</li>
+					<li>Add unlimited players</li>
+					<li>List an unlimited number of games</li>
 					<li><strong>Cancel anytime</strong>.  Payment made through PayPal.com.</li>
 				</ul>
 				<div class="core_clear"></div>
+			</div>
 		</div>
 		</form>
 	</div>
