--- a/pingpong/templates/main.html
+++ b/pingpong/templates/main.html
@@ -25,11 +25,11 @@
 	<div id="singles" class="core_rankings_div core_radius8">
 		<ul class="core_top_three core_radius8">
 		  {% for p in singles_players|slice:"0:3" %}
-			<li class="top_players core_radius8" onclick="showPopup('stats', '/player/stats', '');"><span class="points">{{ p.singles_ranking_points|floatformat:"-2" }}</span>{% ifnotequal p.display_singles_last_movement '' %}<div class="core_last {% if p.singles_lost_last %}core_loss{% endif %} core_radius8">{{ p.display_singles_last_movement }}</div>{% endifnotequal %}<span class="rank core_radius8">{{ forloop.counter }}</span><span class="name">{{ p.name }}</span><div class="core_clear"></div></li>
+			<li class="top_players core_radius8" onclick="showPopup('stats', '/player/stats/{{ p.key }}', '');"><span class="points">{{ p.singles_ranking_points|floatformat:"-2" }}</span>{% ifnotequal p.display_singles_last_movement '' %}<div class="core_last {% if p.singles_lost_last %}core_loss{% endif %} core_radius8">{{ p.display_singles_last_movement }}</div>{% endifnotequal %}<span class="rank core_radius8">{{ forloop.counter }}</span><span class="name">{{ p.name }}</span><div class="core_clear"></div></li>
 			{% endfor %}
 		</ul>
 		{% for p in singles_players|slice:"3:10000" %}
-		<div class="core_the_rest" onclick="showPopup('stats', '/player/stats', '');"><span class="points">{{ p.singles_ranking_points|floatformat:"-2" }}</span>{% ifnotequal p.display_singles_last_movement '' %}<div class="core_last {% if p.singles_lost_last %}core_loss{% endif %} core_radius8">{{ p.display_singles_last_movement }}</div>{% endifnotequal %}<div class="rank">{{ forloop.counter|add:"3" }}.</div><div class="name">{{ p.name }}</div><div class="core_clear"></div></div>
+		<div class="core_the_rest" onclick="showPopup('stats', '/player/stats/{{ p.key }}', '');"><span class="points">{{ p.singles_ranking_points|floatformat:"-2" }}</span>{% ifnotequal p.display_singles_last_movement '' %}<div class="core_last {% if p.singles_lost_last %}core_loss{% endif %} core_radius8">{{ p.display_singles_last_movement }}</div>{% endifnotequal %}<div class="rank">{{ forloop.counter|add:"3" }}.</div><div class="name">{{ p.name }}</div><div class="core_clear"></div></div>
 		{% endfor %}
 		<div class="core_clear"></div>
 	</div>
@@ -38,11 +38,11 @@
 	<div id="doubles" class="core_rankings_div core_radius8" style="display: none">
 		<ul class="core_top_three core_radius8">
 		  {% for p in doubles_players|slice:"0:3" %}
-			<li class="top_players core_radius8" onclick="showPopup('stats', '/player/stats', '');"><span class="points">{{ p.doubles_ranking_points|floatformat:"-2" }}</span>{% ifnotequal p.display_doubles_last_movement '' %}<div class="core_last {% if p.doubles_lost_last %}core_loss{% endif %} core_radius8">{{ p.display_doubles_last_movement }}</div>{% endifnotequal %}<span class="rank core_radius8">{{ forloop.counter }}</span><div class="name">{{ p.name }}</div><div class="core_clear"></div></li>
+			<li class="top_players core_radius8" onclick="showPopup('stats', '/player/stats/{{ p.key }}', '');"><span class="points">{{ p.doubles_ranking_points|floatformat:"-2" }}</span>{% ifnotequal p.display_doubles_last_movement '' %}<div class="core_last {% if p.doubles_lost_last %}core_loss{% endif %} core_radius8">{{ p.display_doubles_last_movement }}</div>{% endifnotequal %}<span class="rank core_radius8">{{ forloop.counter }}</span><div class="name">{{ p.name }}</div><div class="core_clear"></div></li>
 			{% endfor %}
 		</ul>
 		{% for p in doubles_players|slice:"3:10000" %}
-		<div class="core_the_rest" onclick="showPopup('stats', '/player/stats', '');"><span class="points">{{ p.doubles_ranking_points|floatformat:"-2" }}</span>{% ifnotequal p.display_doubles_last_movement '' %}<div class="core_last {% if p.doubles_lost_last %}core_loss{% endif %} core_radius8">{{ p.display_doubles_last_movement }}</div>{% endifnotequal %}<div class="rank">{{ forloop.counter|add:"3" }}.</div><div class="name">{{ p.name }}</div><div class="core_clear"></div></div>
+		<div class="core_the_rest" onclick="showPopup('stats', '/player/stats/{{ p.key }}', '');"><span class="points">{{ p.doubles_ranking_points|floatformat:"-2" }}</span>{% ifnotequal p.display_doubles_last_movement '' %}<div class="core_last {% if p.doubles_lost_last %}core_loss{% endif %} core_radius8">{{ p.display_doubles_last_movement }}</div>{% endifnotequal %}<div class="rank">{{ forloop.counter|add:"3" }}.</div><div class="name">{{ p.name }}</div><div class="core_clear"></div></div>
 		{% endfor %}
 		<div class="core_clear"></div>
 	</div>
