--- a/pingpong/templates/player_stats.html
+++ b/pingpong/templates/player_stats.html
@@ -40,6 +40,7 @@
 					<tr>
 						<th colspan="3" style="text-align: left;">Last 20 games played</th>
 					</tr>
+					{% if games %}
 					{% for g in games %}
 					<tr{% cycle ' class="gray"' '' %}>
 						<td class="{% if player|won:g %}won{% else %}lost{% endif %}"><span>{% if player|won:g %}Won{% else %}Lost{% endif %}</span></td>
@@ -48,24 +49,11 @@
 						  {{ g.team2.player1.name }} {% if g.team2.player2 %} &amp; {{ g.team2.player2.name }} {% endif %} ({{ g.team2.points|floatformat:0 }})</td>
 					</tr>
 					{% endfor %}
-					<!--
-					<tr class="gray">
-						<td class="won"><span>Won</span></td>
-						<td class="the_players">DaveM & JamesD (21) vs. DaveG & BenR (15)</td>
-					</tr>
+					{% else %}
 					<tr>
-						<td class="lost"><span>Lost</span></td>
-						<td class="the_players">DaveM (8) vs. BenR (11)</td>
+						<td colspan="3" style="text-align: left;">{{ player.name }} hasn't played any games yet.</th>
 					</tr>
-					<tr class="gray">
-						<td class="won"><span>Won</span></td>
-						<td class="the_players">Dave M (13) vs. JamesD (11)</td>
-					</tr>
-					<tr>
-						<td class="won"><span>Won</span></td>
-						<td class="the_players">DaveM (11) vs ScottR (9)</td>
-					</tr>
-					-->
+        	{% endif %}
 				</table>
 			</div>
 			<div class="core_clear"></div>
