Fixed 404 and 500 templates.

--- a/pingpong/templates/404.html
+++ b/pingpong/templates/404.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block body %}
+{% block content %}
 <body>
 <h1>Oops - you appear to have requested a resource which doesn't exist.</h1>
 </body>
