--- a/pingpong/templates/500.html
+++ b/pingpong/templates/500.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block body %}
+{% block content %}
 <body>
 <h1>Oops - something went wrong while handling your request.</h1>
 </body>
