--- a/pingpong/templates/index.html
+++ b/pingpong/templates/index.html
@@ -41,10 +41,14 @@
 		<div class="core_clear"></div>
   </div>
   <div class="container" style="padding-top: 0;">
-  	<a href="" onclick="showPopup('signup', '/signup', 'name'); return false;" class="core_right"><img src="{{ MEDIA_URL }}pingpong/images/home_try_it_free.jpg" width="239" height="45" /></a>
+  	<div class="links">
+		<a href="/terms" onclick="showPopup('terms', '/terms', ''); return false;">Terms of use</a>
+	</div>
+	<a href="" onclick="showPopup('signup', '/signup', 'name'); return false;" class="core_right"><img src="{{ MEDIA_URL }}pingpong/images/home_try_it_free.jpg" width="239" height="45" /></a>
   	<div class="core_clear"></div>
   	<span class="cancel core_right">Then $8.95/ mo. Cancel anytime - no hassle.</span>
   </div>
+  
   <script type="text/javascript">
     var baseUrl = "";
     loginFormValue();
