Little bits and pieces everywhere.

--- a/pingpong/templates/player_stats.html
+++ b/pingpong/templates/player_stats.html
@@ -4,7 +4,7 @@
 		<div class="popup_header core_radius_top8">
 			<span class="core_right"><a href="" onClick="hideShade(); $('div#popup_stats').remove(); return false;" class="popup_close"><strong>close</strong></a></span>
 			<img src="{{ MEDIA_URL }}pingpong/images/header_player_stats.gif" width="138" height="24" alt="Add a Game" style="margin-top: 0;" />
-			<div class="stats_name">for Dmart</div>
+			<div class="stats_name">for {{ player.name }}</div>
 		</div>
 		<div class="popup_body core_radius_bottom6">
 			<div class="popup_half core_left core_center popup_light core_radius6" style="padding-right: 15px; width: 34%;">
