--- a/pingpong/templates/index.html
+++ b/pingpong/templates/index.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="top">
   	<div class="logo">
-  		<span class="core_right">
+  		<span class="core_right login_box">
 			<div class="login">
   			  <div class="signup"><a href="" onclick="showPopup('freetrial', '/freetrial', ''); return false;">Signup</a></div>
 			  <form action="{% url pingpong.views.login %}" method="post">
