--- a/pingpong/templates/settings.html
+++ b/pingpong/templates/settings.html
@@ -19,7 +19,7 @@
 				</div>
 				<h3>Edit Players</h3>
 				<div class="mb_extra"></div>
-				<table border="0" cellpadding="0" cellspacing="0">
+				<table border="0" cellpadding="0" cellspacing="0" class="settings_table">
 					<tr>
 						<th>Names</th>
 						<th class="right">Actions</th>
