--- a/pingpong/templates/main.html
+++ b/pingpong/templates/main.html
@@ -10,8 +10,8 @@
 		<div class="nav_container">
 			<a href="" class="nav_singles core_left nav_down core_radius8">Singles</a>
 			<a href="" class="nav_doubles core_left nav_up core_radius8">Doubles</a>
-			<div class="core_right" style="margin: 11px 0 0 30px"><a href="" onclick="showPopup('add', '/score/add', ''); return false;" class="nav_add core_radius8">Add score</a></div>
-			<div class="core_right" style="margin-top: 10px;">
+			<div class="core_right" style="margin: 11px 0 0 30px;"><a href="" onclick="showPopup('add', '/score/add', ''); return false;" class="nav_add core_radius8">Add score</a></div>
+			<div class="core_right" style="margin-top: 5px; padding: 5px 0;">
 				<a href="#" onclick="showPopup('settings', '/settings', ''); return false;" class="links">Settings</a> <a href="{% url django.contrib.auth.views.logout %}" class="links">Logout</a> 
 			</div>
 			<!-- Show when in trial mode - up to 14 days after signup date -->
