--- a/pingpong/templates/player_stats.html
+++ b/pingpong/templates/player_stats.html
@@ -45,7 +45,7 @@
 					{% for g in games %}
 					<tr{% cycle ' class="gray"' '' %}>
 						<td class="{% if player|won:g %}won{% else %}lost{% endif %}"><span>{% if player|won:g %}Won{% else %}Lost{% endif %}</span></td>
-						<td class="the_players">
+						<td class="the_players" title="Played {{ g.date_played|timesince }} ago">
 						  {{ g.team1.player1.name }} {% if g.team1.player2 %} &amp; {{ g.team1.player2.name }} {% endif %} ({{ g.team1.points|floatformat:0 }}) vs. 
 						  {{ g.team2.player1.name }} {% if g.team2.player2 %} &amp; {{ g.team2.player2.name }} {% endif %} ({{ g.team2.points|floatformat:0 }})</td>
 					</tr>
