A few changes to still allow access to the marketing page when a user is logged in.

--- a/pingpong/templates/freetrial.html
+++ b/pingpong/templates/freetrial.html
@@ -57,7 +57,7 @@
 
 			</div>
 			<div class="core_box_side">
-				<h3>What is Ping Pong App?</h3>
+				<h3>What is PingPongNinja?</h3>
 				<p>It's an easy way for you to track your ping pong rankings at work or with your friends.</p>
 				
 				<h3>How much does it cost?</h3>
