--- a/pingpong/templates/signup.html
+++ b/pingpong/templates/signup.html
@@ -24,12 +24,12 @@
 
 			</div>
 			<div class="core_box_side">
-				<h3>What is Ping Pong App?</h3>
+				<h3>What is PingPongNinja?</h3>
 				<p>It's an easy way for you to track your ping pong rankings at work or with your friends.</p>
 				
 				<h3>How much does it cost?</h3>
 				<ul>
-					<li>Try it 14 days for free.  No credit card is required.</li>
+					<li>Try for free for 14 days.  No credit card is required.</li>
 					<li>Then pay <strong>$8.95/mo</strong> (unlimited games and players)</li>
 					<li>Cancel anytime with zero hassle.</li>
 				</ul>
