--- a/pingpong/media/core.css
+++ b/pingpong/media/core.css
@@ -122,14 +122,16 @@ body#home .links { float: left; }
 body#home .links a { margin-right: 13px; }
 body#home .login { float: right; margin-top: 3px; }
 body#home .login .small { font-size: 13px; padding: 4px; width: 85px; margin-right: 3px; }
-html>/**/body#home .login .small, x:-moz-any-link, x:default { padding: 5px 4px; }
+body#home .login .small, x:-moz-any-link, x:default { padding: 5px 4px; }
 body#home .logo { margin: 0 auto; width: 812px; padding: 23px 0 21px 0; }
 body#home .popup li, body#home .popup p { color: #666; font-size: 12px; }
-body#home .signup { color: #888; margin: 0 0 8px 0; }
+body#home .signup { color: #888; margin: 0 0 8px 0; font-size: 14px; }
 body#home .signup_box { float: right; margin-top: 17px; }
 body#home .top { background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#3B3B3B), to(#141414)); background-image: -moz-linear-gradient(0% 100% 90deg,#141414, #3b3b3b); }
 body#home .trial { background: url(images/home_icon_trial.jpg) no-repeat; padding-left: 80px; }
 body#home .unlimited { background: url(images/home_icon_unlimited.jpg) no-repeat; padding-left: 80px; }
+body#home .logged_in { font-size: 14px; }
+body#home .terms_of_use { font-size: 14px; }
 /* =========================================
     Loader
    ========================================= */
@@ -157,7 +159,7 @@ body#home .unlimited { background: url(images/home_icon_unlimited.jpg) no-repeat
 .nav_add span { display:block; position:absolute; left:12px; top:7px; z-index:1; width:109px; height:32px;  margin:0; padding:0; }
 .nav_doubles span { display:block; position:absolute; left:12px; top:7px; z-index:1; width:90px; height:32px;  margin:0; padding:0; }
 .nav_down, .nav_up:hover { position: relative;  padding: 10px 14px !important; cursor:default; border-top: 1px solid #1B1B1B; border-left: 1px solid #1B1B1B; border-bottom: 1px solid #313131; border-right: 1px solid #313131; color: #A0A0A0; background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#222222), to(#2A2A2A)); background-image: -moz-linear-gradient(0% 100% 90deg,#2A2A2A, #222222); -moz-box-shadow: #1B1B1B 2px 2px 2px 0 inset; text-shadow: 1px 1px 3px #1B1B1B; }
-.nav a.links { text-decoration: none; margin: 10px 0 0 23px; padding: 0; }
+.nav a.links { text-decoration: none; margin: 10px 0 0 23px; padding: 0; font-size: 18px; }
 .nav_singles span { display:block; position:absolute; left:12px; top:7px; z-index:1; width:83px; height:32px;  margin:0; padding:0; }
 .nav_trial { text-align: right; margin: 11px 0 0 0; font-size: 16px; color: #666; }
 .nav_trial a { margin: 0; padding: 0; font-size: 16px; text-decoration: underline; }
