--- a/pingpong/templates/404.html
+++ b/pingpong/templates/404.html
@@ -15,7 +15,7 @@
 <body id="home">
     <div class="top">
   	<div class="logo">
-  		<img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="286" height="75" alt="Ping Pong App - Simple tournament software" />
+  		<img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="286" height="75" alt="PingPongNinja - In-Office Ping Pong Rankings" />
   	</div>
   </div>
   <div class="container">
