--- a/pingpong/templates/index.html
+++ b/pingpong/templates/index.html
@@ -6,19 +6,24 @@
   <div class="top">
   	<div class="logo">
   		<span class="core_right login_box">
-			<div class="login">
-  			  <div class="signup"><a href="" onclick="showPopup('freetrial', '/freetrial', ''); return false;">Signup</a></div>
-			  <form action="{% url pingpong.views.login %}" method="post">
-    				<input type="image" src="{{ MEDIA_URL }}pingpong/images/btn_home_login.jpg" height="28" width="55" tabindex="3" class="core_right" />
-					<input type="password" id="loginPassword" onfocus="loginClear();" onblur="loginFormValue();" name="password" tabindex="2" class="small core_right"  />
-					<input type="text" id="loginUsername" onfocus="loginClear('username');" onblur="loginFormValue();" name="username" tabindex="1" class="small core_right" {% if previous_username %}value="{{ previous_username }}"{% endif %} />
+    		{% if not request.user.is_authenticated %}
+  			<div class="login">
+    			  <div class="signup"><a href="" onclick="showPopup('freetrial', '/freetrial', ''); return false;">Signup</a></div>
+  			  <form action="{% url pingpong.views.login %}" method="post">
+            <input type="image" src="{{ MEDIA_URL }}pingpong/images/btn_home_login.jpg" height="28" width="55" tabindex="3" class="core_right" />
+            <input type="password" id="loginPassword" onfocus="loginClear();" onblur="loginFormValue();" name="password" tabindex="2" class="small core_right"  />
+            <input type="text" id="loginUsername" onfocus="loginClear('username');" onblur="loginFormValue();" name="username" tabindex="1" class="small core_right" {% if previous_username %}value="{{ previous_username }}"{% endif %} />
   			  </form>
   			  {% if login_error %}<div id="login_error">{{ login_error }}</div>{% endif %}
   			</div>
-			
+  			{% else %}
+  			<div class="logged_in">
+  			  Welcome {{ user.username }}! &nbsp;&nbsp;<a href="{% url pingpong.views.index %}">My dashboard</a> | <a href="{% url django.contrib.auth.views.logout %}">Logout</a>
+  			</div>
+  			{% endif %}
   			<div class="core_clear"></div>
   		</span>
-  		<img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="286" height="75" alt="Ping Pong App - Simple tournament software" />
+  		<img src="{{ MEDIA_URL }}pingpong/images/home_logo.gif" width="286" height="75" alt="PingPongNinja - In-Office Ping Pong Rankings" />
   	</div>
   </div>
   <div class="container">
@@ -41,10 +46,10 @@
 		<div class="core_clear"></div>
   </div>
   <div class="container" style="padding-top: 0;">
-  	<div class="links">
-		<a href="/terms" onclick="showPopup('terms', '/terms', ''); return false;">Terms of use</a>
+  	<div class="links terms_of_use">
+		<a href="" onclick="showPopup('terms', '{% url pingpong.views.terms %}', ''); return false;">Terms of use</a>
 	</div>
-	<a href="" onclick="showPopup('signup', '/signup', 'name'); return false;" class="core_right"><img src="{{ MEDIA_URL }}pingpong/images/home_try_it_free.jpg" width="239" height="45" /></a>
+	<a href="" onclick="showPopup('signup', '{% url pingpong.views.signup %}', 'name'); return false;" class="core_right"><img src="{{ MEDIA_URL }}pingpong/images/home_try_it_free.jpg" width="239" height="45" /></a>
   	<div class="core_clear"></div>
   	<span class="cancel core_right">Then $8.95/ mo. Cancel anytime - no hassle.</span>
   </div>
