--- a/pingpong/templates/signup.html
+++ b/pingpong/templates/signup.html
@@ -1,3 +1,8 @@
+	<script>	
+		$(document).ready(function() {
+			$("#signupForm").validationEngine()
+		});
+	</script>
 	<div id="popup_signup" class="popup popup_medlrg core_radius_top6">
 		<div class="popup_header core_radius_top6">
 			<span class="core_right"><a href="" onClick="hideShade(); return false;" class="popup_close"><strong>close</strong></a></span>
@@ -12,12 +17,12 @@
 				<p>Signing up for PingPongNinja is by invite only for the time-being.  Don't worry, we'll be adding new accounts shortly.  Add your email below and we'll notify you when we are ready.</p> 
 				<div class="mb_extra"></div>
 				
-				<form action="http://pingpongapp.createsend.com/t/r/s/hutrdy/" method="post">
+				<form action="http://pingpongapp.createsend.com/t/r/s/hutrdy/" method="post" id="signupForm">
 					<label for="name">What's your name?</label>
-					<input type="text" name="cm-name" id="name" class="pads" />
+					<input type="text" name="cm-name" id="name" class="pads validate[required]" />
 					<div class="mb_extra"></div>
 					<label for="hutrdy-hutrdy">What's your email address?</label>
-					<input type="text" name="cm-hutrdy-hutrdy" id="hutrdy-hutrdy"  class="pads med" />
+					<input type="text" name="cm-hutrdy-hutrdy" id="hutrdy-hutrdy" class="pads med validate[custom[email],required]" />
 					<div class="mb_extra"></div>
 					<p><input type="submit" class="btn_blue core_radius3" value="I'd like an invite" /></p>
 				</form>
