--- a/pingpong/templates/freetrial.html
+++ b/pingpong/templates/freetrial.html
@@ -1,3 +1,8 @@
+	<script>	
+		$(document).ready(function() {
+			$("#signups").validationEngine()
+		});
+	</script>
 	<div id="popup_freetrial" class="popup popup_medlrg core_radius_top6">
 		<div class="popup_header core_radius_top6">
 			<span class="core_right"><a href="" onClick="hideShade(); return false;" class="popup_close"><strong>close</strong></a></span>
@@ -15,7 +20,7 @@
 				<form id="signups">
 				
 					<label for="username">Choose an account name</label>
-					<input type="text" name="username" id="username" class="core_left pads med" autocomplete="off" onkeyup="signupCheckUsername(this.value);" />
+					<input type="text" name="username" id="username" class="core_left pads med validate[required,custom[noSpecialCaracters],length[4,20]]" autocomplete="off" onkeyup="signupCheckUsername(this.value);" />
 					<div class="popup_domain core_left">.pingpongninja.com</div>
 					<div class="core_clear"></div>
 					<div id="core_uname_confirm"></div>
@@ -24,19 +29,19 @@
 					<div class="mb"></div>
 					
 					<label for="password">Enter a password</label>
-					<input type="password" name="password" id="password" class="core_left pads" />
+					<input type="password" name="password" id="password" class="core_left pads validate[required,length[4,30]]" />
 					<div id="password_error" class="core_mb_extra core_error"><!-- Populate if error --></div>
 					<div class="core_clear"></div>
 					<div class="mb"></div>
 
 					<label for="password_confirm">Retype your password</label>
-					<input type="password" name="passwordconfirm" id="passwordconfirm" class="core_left pads" />
+					<input type="password" name="passwordconfirm" id="passwordconfirm" class="core_left pads validate[required,confirm[password],length[4,20]]" />
 					<div id="confirm_error" class="core_mb_extra core_error"><!-- Populate if error --></div>
 					<div class="core_clear"></div>
 					<div class="mb"></div>
 
 					<label for="email">Enter your email address</label>
-					<input type="text" name="email" id="email" class="core_left pads med" />
+					<input type="text" name="email" id="email" class="core_left pads med validate[required,custom[email]]" />
 					<div id="email_error" class="core_mb_extra core_error"><!-- Populate if error --></div>
 					<div class="core_clear"></div>
 					<div class="mb"></div>
@@ -45,7 +50,7 @@
 					<p class="core_text_med mb8 core_light">Add each of your players, one name per line.</p>
 					<div class="signup_players_box">
 						<div id="signup_players_example" class="signup_players_example">David M<br />James D</div>
-						<textarea name="players" id="players" class="signup_players"></textarea>
+						<textarea name="players" id="players" class="signup_players validate[required]"></textarea>
 					</div>
 					<div id="players_error" class="core_mb_extra core_error"><!-- Populate if error --></div>
 					<div class="core_clear"></div>
