hope Im not screwing this merge up

--- a/pingpong/templates/settings.html
+++ b/pingpong/templates/settings.html
@@ -42,10 +42,12 @@
 				<div class="mb_supa"></div>
 				<h3>Account</h3>
 				<div class="mb_extra"></div>
-				
+
 				<label for="email">Email address</label><br />
+
 				<input type="text" name="email" id="email" class="core_left pads med validate[custom[email],required]" value="{{ email }}" />
-				<div id="email_error" class="core_mb_extra core_error"><!-- Populate if error --></div>
+				<div id="email_error" class="core_mb_extra core_error"></div>
+
 				<div class="core_clear"></div>
 				<div class="mb"></div>
 				
